# Shopwise

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  shoplist.txt  shopwise.cfg.html  shopwise.engine.base.html  shopwise.engine.html  shopwise.html  shopwise.scraping.base.html  shopwise.scraping.html  shopwise.scraping.supermarkets.html  shopwise.utils.base.html  shopwise.utils.html  shopwise.utils.ops.html  shopwise.utils.supermarket.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  shopwise.cfg.doctree  shopwise.doctree  shopwise.engine.base.doctree  shopwise.engine.doctree  shopwise.scraping.base.doctree  shopwise.scraping.doctree  shopwise.scraping.supermarkets.doctree  shopwise.utils.base.doctree  shopwise.utils.doctree  shopwise.utils.ops.doctree  shopwise.utils.supermarket.doctree
.github/: pull_request_template.md
.github/workflows/: docs.yml  test-ci.yml  verify-pr.yml
_sources/: index.rst.txt  modules.rst.txt  shopwise.cfg.rst.txt  shopwise.engine.base.rst.txt  shopwise.engine.rst.txt  shopwise.rst.txt  shopwise.scraping.base.rst.txt  shopwise.scraping.rst.txt  shopwise.scraping.supermarkets.rst.txt  shopwise.utils.ops.rst.txt  shopwise.utils.rst.txt  shopwise.utils.supermarket.rst.txt
docs/: conf.py  shopwise.utils.base.rst
shopwise/: __init__.py
shopwise/cfg/: __init__.py  default.yaml
shopwise/engine/: __init__.py  base.py
shopwise/scraping/: __init__.py  base.py  (+1 more)
similar_search/: items.txt
tests/: test_ops.py
(+3 files in other folders)
